--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
 							<!-- <iframe class="latestVideoEmbed custom-iframe" vnum='0' width="600" height="340"
 								frameborder="0" allowfullscreen></iframe>-->
 
-								<iframe width="600" height="340" src="https://www.youtube.com/embed/JFIR_7dgTKk?si=yrPixhv4QIZyuYGs" title="小朋友發音唔準確又成日流口水⋯" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+							<iframe width="600" height="340"
+								src="https://www.youtube.com/embed/JFIR_7dgTKk?si=yrPixhv4QIZyuYGs"
+								title="小朋友發音唔準確又成日流口水⋯" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+								referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
@@ -211,6 +215,30 @@
 			</div>
 			<!-- for section -->
 			<div class="row">
+
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
+							<a href="article/article014.html">
+								<img src="images/Article/article014.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">自閉症譜系障礙5大特徵</h5><br>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 8分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 163 </i>
+									<i class="fa fa-heart-o"> 89 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<!-- Repeat this block for each card -->
 				<div class="col-md-4">
 					<div class="card">
@@ -242,7 +270,7 @@
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">語言發展的重要基石 ─ 語言前技能(下)</h5> 
+							<h5 class="card-title">語言發展的重要基石 ─ 語言前技能(下)</h5>
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
@@ -250,29 +278,6 @@
 								<div class="right">
 									<i class="fa fa-eye"> 199 </i>
 									<i class="fa fa-heart-o"> 92 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article011.html">
-								<img src="images/Article/article011.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">執行功能是甚麼?</h5><br>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 5分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 210 </i>
-									<i class="fa fa-heart-o"> 135 </i>
 								</div>
 							</div>
 						</div>
