--- a/our-services/intervention.html
+++ b/our-services/intervention.html
@@ -36,7 +36,7 @@
 			$("select").change(function () {
 				var target = $(this).val(); // Get the value of the selected option
 				var $target = $(target);
-	
+
 				if ($target.length) {
 					$('html, body').animate({
 						scrollTop: $target.offset().top - 250 // Adjusts scroll position
@@ -47,8 +47,8 @@
 			});
 		});
 	</script>
-	
-	
+
+
 	<!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <![endif]-->
@@ -99,8 +99,8 @@
 											</ul>
 										</li>
 										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom"
-											data-toggle="dropdown" role="button" aria-haspopup="true"
-											aria-expanded="false">諾道團隊<span class="caret"></span></a>
+												data-toggle="dropdown" role="button" aria-haspopup="true"
+												aria-expanded="false">諾道團隊<span class="caret"></span></a>
 											<ul class="dropdown-menu">
 												<li><a class="hvr-bounce-to-bottom"
 														href="../about.html#therapist">言語治療師</a></li>
@@ -109,7 +109,7 @@
 												<li><a class="hvr-bounce-to-bottom"
 														href="../about.html#psychologist">教育心理學家</a></li>
 											</ul>
-									</li>
+										</li>
 										<li><a href="../share.html">諾道分享</a></li>
 										<li><a href="../good.html">諾道好評</a></li>
 										<li><a href="../contact.html">聯絡諾道</a></li>
@@ -124,8 +124,10 @@
 								&nbsp&nbsp
 								<li><a href="mailto:info@prowayst.com"><img src="../images/mail.png"></i></a></li>
 								&nbsp&nbsp
-								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img src="../images/facebook.png"></a></li>&nbsp&nbsp
-								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img src="../images/instagram.png"></a></li>
+								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img
+											src="../images/facebook.png"></a></li>&nbsp&nbsp
+								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img
+											src="../images/instagram.png"></a></li>
 							</ul>
 						</div>
 						<div class="clearfix"> </div>
@@ -158,6 +160,7 @@
 						<option value="#treatment1">個別⾔語治療</option>
 						<option value="#treatment2">綜合能力提升班</option>
 						<option value="#treatment3">諾道非凡個別訓練</option>
+						<option value="#treatment4">諾道感官探索班</option>
 					</select>
 				</div>
 			</div>
@@ -179,49 +182,73 @@
 					涵蓋範疇：語⾔＋認知＋社交＋讀寫＋⼤⼩肌＋⾃理＋情緒
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢A-PLUS密集訓練班"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢A-PLUS密集訓練班"><img
+							src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
-				<p><h4><img src="../images/o1.png"><b id="treatment1"> 個別⾔語治療</b></h4><br>
+				<p>
+				<h4><img src="../images/o1.png"><b id="treatment1"> 個別⾔語治療</b></h4><br>
 
-					諾道提供全⾯的⾔語治療評估、診斷及跟進訓練，範疇涵蓋語⾔障礙(語⾔理解、語⾔表達)、⾔語障礙(發⾳、聲線、流暢度)、社交溝通障礙以及餵食和吞嚥障礙。
-					<br><br>
-					我們承諾整個跟進過程均由同⼀位⾔語治療師直接負責，確保你得到⾼質素和⼀致性的⾔語治療服務。<br><br>
-					🔶 持3個⽉內⾔語治療評估報告可免評估<br>
-					🔶 每次治療後均會和家長傾談當節重點及跟進⽅向<br>
-					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢個別言語治療"><img src="../images/whatsapp.png">
-						6532 8821</a>，將有專人為你提供詳情。
+				諾道提供全⾯的⾔語治療評估、診斷及跟進訓練，範疇涵蓋語⾔障礙(語⾔理解、語⾔表達)、⾔語障礙(發⾳、聲線、流暢度)、社交溝通障礙以及餵食和吞嚥障礙。
+				<br><br>
+				我們承諾整個跟進過程均由同⼀位⾔語治療師直接負責，確保你得到⾼質素和⼀致性的⾔語治療服務。<br><br>
+				🔶 持3個⽉內⾔語治療評估報告可免評估<br>
+				🔶 每次治療後均會和家長傾談當節重點及跟進⽅向<br>
+				<br>
+				想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢個別言語治療"><img src="../images/whatsapp.png">
+					6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
-				<p><h4><img src="../images/o2.png"> <b id="treatment2"> 綜合能力提升班</b></h4><br>
+				<p>
+				<h4><img src="../images/o2.png"> <b id="treatment2"> 綜合能力提升班</b></h4><br>
 
-					🔶 ⾔語治療師諮詢，註冊社⼯帶領，跨專業協助⼩朋友提升各項能⼒<br>
-					🔶 ⾼⼈⼿比例(1對2)，確保你的孩⼦每分每秒都有所得著<br>
-					🔶 每期均由同⼀位註冊社⼯負責，確保質素及⼀致性<br>
-					🔶 每次課後均會和家長傾談當節重點及跟進⽅向<br><br>
-					涵蓋範疇：語⾔＋認知＋社交＋讀寫＋⼤⼩肌＋⾃理＋情緒
-					<br>
-					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢綜合能力提升班"><img src="../images/whatsapp.png">
-						6532 8821</a>，將有專人為你提供詳情。
+				🔶 ⾔語治療師諮詢，註冊社⼯帶領，跨專業協助⼩朋友提升各項能⼒<br>
+				🔶 ⾼⼈⼿比例(1對2)，確保你的孩⼦每分每秒都有所得著<br>
+				🔶 每期均由同⼀位註冊社⼯負責，確保質素及⼀致性<br>
+				🔶 每次課後均會和家長傾談當節重點及跟進⽅向<br><br>
+				涵蓋範疇：語⾔＋認知＋社交＋讀寫＋⼤⼩肌＋⾃理＋情緒
+				<br>
+				<br>
+				想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢綜合能力提升班"><img src="../images/whatsapp.png">
+					6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
-				<p><h4><img src="../images/o5.png"> <b id="treatment3"> 諾道非凡個別訓練</b></h4><br>
+				<p>
+				<h4><img src="../images/o5.png"> <b id="treatment3"> 諾道非凡個別訓練</b></h4><br>
 
-					<p>🚀 為你把個別訓練帶到另⼀個層次</p>
-					<br>
-					將⾔語治療及綜合能⼒訓練結合，每次課堂先由⾔語治療師提供30分鐘個別⾔語治療，緊接由註冊社⼯透過45分鐘個別訓練將前者所學加以鞏固，同時提升其他發展範疇。<br><br>
-					🔶 透過1對1形式針對性提升孩⼦能⼒<br>
-					🔶 每期均由同⼀位⾔語治療師及註冊社⼯負責，確保質素及⼀致性<br>
-					🔶 每次課後註冊社⼯均會和家長傾談當節重點及跟進⽅向<br>
-					🔶 每期詳細家長諮詢由⾔語治療師負責(可選⾯談/zoom)<br><br>
-					涵蓋範疇：語⾔＋認知＋讀寫＋⼤⼩肌＋⾃理＋情緒
-					<br>
-					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道非凡個別訓練"><img src="../images/whatsapp.png">
-						6532 8821</a>，將有專人為你提供詳情。
+				<p>🚀 為你把個別訓練帶到另⼀個層次</p>
+				<br>
+				將⾔語治療及綜合能⼒訓練結合，每次課堂先由⾔語治療師提供30分鐘個別⾔語治療，緊接由註冊社⼯透過45分鐘個別訓練將前者所學加以鞏固，同時提升其他發展範疇。<br><br>
+				🔶 透過1對1形式針對性提升孩⼦能⼒<br>
+				🔶 每期均由同⼀位⾔語治療師及註冊社⼯負責，確保質素及⼀致性<br>
+				🔶 每次課後註冊社⼯均會和家長傾談當節重點及跟進⽅向<br>
+				🔶 每期詳細家長諮詢由⾔語治療師負責(可選⾯談/zoom)<br><br>
+				涵蓋範疇：語⾔＋認知＋讀寫＋⼤⼩肌＋⾃理＋情緒
+				<br>
+				<br>
+				想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道非凡個別訓練"><img src="../images/whatsapp.png">
+					6532 8821</a>，將有專人為你提供詳情。
+				</p>
+				<hr>
+				<p>
+				<h4><img src="../images/o6.png"> <b id="treatment4"> 諾道感官探索班</b></h4><br>
+
+				<p>🚀 為你把個別訓練帶到另⼀個層次</p>
+				<br>
+				感官系統是認知發展的基礎，幼兒透過接收身邊的各種感官刺激去探索世界。通過在發展早期提供豐富多樣的感官體驗，促進孩⼦對於外界的認知和理解，從⽽提升處理環境信息的能⼒，同時刺激各個範疇的發展。<br><br>
+				諾道的感官探索班為幼兒的觸覺、前庭平衡覺、視覺、本體覺等多個感官⻆度提供相應刺激，促進幼兒的認知、⼤肌及⼩肌、社交情緒以及語⾔發展。<br><br>
+				✅ 主題感官盤＋感統活動<br>
+				✅ 多感官學習，提升感覺訊息處理能⼒<br>
+				✅ 促進認知、⼤肌及⼩肌、社交情緒以及語⾔發展<br>
+				✅ 促進⼩⼿肌發展，提升執⾏精細動作能⼒，打好執筆寫字基礎<br>
+				✅ 培養創造⼒、提升專注、穩定情緒<br>
+				<br>
+				⭐ 每⽉推出不同主題，敬請留意IG/FB發佈的最新消息！
+				<br>
+				<br>
+				想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道感官探索班"><img src="../images/whatsapp.png">
+					6532 8821</a>，將有專人為你提供詳情。
 				</p>
 			</div>
 
@@ -243,32 +270,32 @@
 	</div>
 	</div>
 	<!-- //single -->
-<!-- footer -->
-<div class="footer">
-	<div class="container">
-		<div class="agile-footer-grids">
-			<div class="col-md-4 agile-footer-grid">
-				<h4>諾道言語治療</h4>
-				<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
-				<span>電話：6532 8821</span><br>
-				<span>電郵：info@prowayst.com</span>
+	<!-- footer -->
+	<div class="footer">
+		<div class="container">
+			<div class="agile-footer-grids">
+				<div class="col-md-4 agile-footer-grid">
+					<h4>諾道言語治療</h4>
+					<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+					<span>電話：6532 8821</span><br>
+					<span>電郵：info@prowayst.com</span>
+				</div>
+
+				<div class="col-md-4 agile-footer-grid">
+					<span><b>星期二至日</b> 09:00 - 18:00</span><br>
+					<span><b>星期一</b> 休息</span><br>
+					<span><b>敬請預約</b></span>
+				</div>
+
+				<div class="videos col-md-2 agile-footer-grid">
+
+				</div>
+
+				<div class="clearfix"> </div>
 			</div>
-
-			<div class="col-md-4 agile-footer-grid">
-				<span><b>星期二至日</b> 09:00 - 18:00</span><br>
-				<span><b>星期一</b> 休息</span><br>
-				<span><b>敬請預約</b></span>
-			</div>
-
-			<div class="videos col-md-2 agile-footer-grid">
-
-			</div>
-
-			<div class="clearfix"> </div>
 		</div>
 	</div>
-</div>
-<!-- //footer -->
+	<!-- //footer -->
 	<!-- copyright -->
 	<div class="agileits-w3layouts-copyright">
 		<div class="container">
