--- a/share.html
+++ b/share.html
@@ -141,6 +141,28 @@
 			<div class="col-md-4">
 				<div class="card">
 					<div class="image-container">
+						<a href="article/article014.html">
+							<img src="images/Article/article014.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">自閉症譜系障礙5大特徵</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 8分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 163 </i>
+								<i class="fa fa-heart-o"> 89 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
 						<a href="article/article013.html">
 							<img src="images/Article/article013.png" alt="Card image">
 							<div class="line"></div>
