--- a/article/article014.html
+++ b/article/article014.html
@@ -194,8 +194,8 @@
 						視覺、聽覺、味覺、嗅覺、觸覺、前座平衡覺、本體感覺、內感是人類八大感覺種類，自閉症譜系障礙的孩子在接收、處理、整合感覺方面跟非自閉症的孩子存在明顯差異。這種感官反應的不尋常導致他們會過度追求或逃避日常的感官刺激。簡單來說可分為「過敏」及「低敏」兩大類。
 						<br><br>
 
-						- 對感覺刺激過度敏感：一些對大部分人來說無關痛癢的感覺， 對他們來說是非常不適，可能引起極端驚恐或抗拒，例如環境中的燈光和聲⾳、 身體接觸<br>
-						- 對感覺刺激不敏感：有些會對痛楚、溫度等刺激反應過低，有些則會過分追求嗅某種味道、觸摸某種質感、凝視某些光源及動態，或是某種對大部分人而言不太舒服的感覺，例如旋轉、用牙齒咬某些物質(如膠質、⽊質)、上下跳動、前後搖晃身體的感覺
+						- 對感覺刺激過度敏感：一些對大部分人來說無關痛癢的感覺， 對他們來說是非常不適，可能引起極端驚恐或抗拒，例如環境中的燈光和聲音、 身體接觸<br>
+						- 對感覺刺激不敏感：有些會對痛楚、溫度等刺激反應過低，有些則會過分追求嗅某種味道、觸摸某種質感、凝視某些光源及動態，或是某種對大部分人而言不太舒服的感覺，例如旋轉、用牙齒咬某些物質(如膠質、木質)、上下跳動、前後搖晃身體的感覺
 						<br><br>
 
 						<h4><b>五）情緒問題</b></h4>
