--- a/article/article014.html
+++ b/article/article014.html
@@ -171,12 +171,12 @@
 						- 難以理解非語言溝通，例如身體語言、表情和手勢<br><br>
 
 						<h4><b>二）社交障礙</b></h4>
-						「心智解讀」是大腦其中一項重要功能，讓我們能理解周遭的環境和事物、推斷自己及他人的內心狀態，例如內心的想法、喜惡、需求等。 在人與人的相處過程中，我們不斷從對話背景、內容、對方的表情及語氣等，來推斷對方的想法，並作出合適回應。而自閉症譜系障礙的患者在這項大腦功能上出現缺損，導致在社交上障礙重重。
+						「心智解讀」是大腦其中一項重要功能，讓我們能理解周遭的環境和事物、推斷自己及他人的內心狀態，例如內心的想法、喜惡、需求等。在人與人的相處過程中，我們不斷從對話背景、內容、對方的表情及語氣等，來推斷對方的想法，並作出合適回應。而自閉症譜系障礙的患者在這項大腦功能上出現缺損，導致在社交上障礙重重。
 						<br><br>
 						常見表現：<br>
 						- 難以建⽴和維護親密的社交關係<br>
 						- 較少表達自己的情感<br>
-						- 難以理解他人行為背後的感覺、情緒、需要、價值觀和想法，容易因錯誤理解社交情況或形勢，而產生誤會或出現不恰當的行為表現<br>
+						- 難以理解他人行為背後的感覺、情緒、需要、價值觀和想法，容易因錯誤理解社交情況或形勢，<br>&nbsp;&nbsp;而產生誤會或出現不恰當的行為表現<br>
 						- 缺乏對他人情感狀態的理解，難以感知和回應他人的情感表達<br>
 						- 難以理解基本社交規則及禁忌<br><br>
 
@@ -185,17 +185,17 @@
 						常見表現：<br>
 						- 通常較固執，難以接受轉變或突如其來的事情，哪怕是大部分人覺得無關痛癢的轉變<br>
 						- 喜歡固定和有預測性的環境，難以適應不按照自己預計發生的情況<br>
-						- 興趣狹窄，但對有興趣的主題或活動表現出極大的興趣甚至沉迷，並對相關主題有深入的知識，例如喜歡巴士，對於巴士路線，型號、出產地等資料都能倒背如流<br>
+						- 興趣狹窄，但對有興趣的主題或活動表現出極大的興趣甚至沉迷，並對相關主題有深入的知識，<br>&nbsp;&nbsp;例如喜歡巴士，對於巴士路線，型號、出產地等資料都能倒背如流<br>
 						- 傾向進行重複的行為，例如重複一樣動作或說話、著迷於搖晃或旋轉的物體<br>
-						- 執著於特定的日常活動、程序或行為模式，例如每天以相同的方法或次序玩相同的玩具、每天都按同樣的流程生活
+						- 執著於特定的日常活動、程序或行為模式，例如每天以相同的方法或次序玩相同的玩具、每天都<br>&nbsp;&nbsp;按同樣的流程生活
 						
 						<br><br>
 						<h4><b>四）感覺統合問題</b></h4>
 						視覺、聽覺、味覺、嗅覺、觸覺、前座平衡覺、本體感覺、內感是人類八大感覺種類，自閉症譜系障礙的孩子在接收、處理、整合感覺方面跟非自閉症的孩子存在明顯差異。這種感官反應的不尋常導致他們會過度追求或逃避日常的感官刺激。簡單來說可分為「過敏」及「低敏」兩大類。
 						<br><br>
 
-						- 對感覺刺激過度敏感：一些對大部分人來說無關痛癢的感覺， 對他們來說是非常不適，可能引起極端驚恐或抗拒，例如環境中的燈光和聲音、 身體接觸<br>
-						- 對感覺刺激不敏感：有些會對痛楚、溫度等刺激反應過低，有些則會過分追求嗅某種味道、觸摸某種質感、凝視某些光源及動態，或是某種對大部分人而言不太舒服的感覺，例如旋轉、用牙齒咬某些物質(如膠質、木質)、上下跳動、前後搖晃身體的感覺
+						- 對感覺刺激過度敏感：一些對大部分人來說無關痛癢的感覺， 對他們來說是非常不適，可能引<br>&nbsp;&nbsp;起極端驚恐或抗拒，例如環境中的燈光和聲音、 身體接觸<br>
+						- 對感覺刺激不敏感：有些會對痛楚、溫度等刺激反應過低，有些則會過分追求嗅某種味道、觸摸<br>&nbsp;&nbsp;某種質感、凝視某些光源及動態，或是某種對大部分人而言不太舒服的感覺，例如旋轉、用牙齒<br>&nbsp;&nbsp;咬某些物質(如膠質、木質)、上下跳動、前後搖晃身體的感覺
 						<br><br>
 
 						<h4><b>五）情緒問題</b></h4>
