--- a/article/article016_test.html
+++ b/article/article016_test.html
@@ -10,7 +10,7 @@
 	<meta property="og:title" content="提升親子關係：親子「特別遊戲時間」" />
 	<meta property="og:description" content="透過親子特別遊戲時間，孩子可以表達自己並釋放情緒。了解如何促進良好的親子互動。" />
 	<meta property="og:image" content="../images/Article/article016.png" />
-	<meta property="og:url" content="article/article017.html" />
+	<meta property="og:url" content="article/article016_test.html" />
 
 	<script
 		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -63,12 +63,12 @@
 		}
 
 		// Sharing to Facebook
-		// Sharing to Facebook
 		function shareToFacebook() {
 			const url = encodeURIComponent(window.location.href); // The current page URL
 			const text = encodeURIComponent('看看這篇文章！'); // The text you want to share
-			window.open(`https://www.facebook.com/sharer/sharer.php?u=https://prowayst.com/article/article014.html&quote=${text}`, '_blank');
+			window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}&quote=${text}`, '_blank');
 		}
+
 
 
 
