--- a/article/article016_test.html
+++ b/article/article016_test.html
@@ -9,8 +9,8 @@
 	<meta name="keywords" content="" />
 	<meta property="og:title" content="提升親子關係：親子「特別遊戲時間」" />
 	<meta property="og:description" content="透過親子特別遊戲時間，孩子可以表達自己並釋放情緒。了解如何促進良好的親子互動。" />
-	<meta property="og:image" content="https://您的網站域名/images/Article/article016.png" />
-	<meta property="og:url" content="https://您的網站域名/article/article016_test.html" />
+	<meta property="og:image" content="../images/Article/article016.png" />
+	<meta property="og:url" content="article/article016_test.html" />
 
 	<script
 		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -196,13 +196,13 @@
 									style="background-color: transparent; border-color: transparent; color: rgb(5, 77, 49);"
 									onclick="shareToWhatsApp()">
 									<img src="../images/whatsapp2.png"
-										style="width: 24px; height: 24px; vertical-align: middle;"> WhatsApp
+										style="width: 24px; height: 24px; vertical-align: middle; margin-right: 3px;"> WhatsApp
 								</button>
 								<button class="btn btn-primary"
 									style="background-color: transparent; border-color: transparent; color: rgb(5, 77, 49);"
 									onclick="shareToFacebook()">
 									<img src="../images/facebook.png"
-										style="width: 24px; height: 24px; vertical-align: middle;"> Facebook
+										style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;"> Facebook
 								</button>
 							</div>
 						</div>
